fix links to pages and manifest

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/vendor/cdn/fontawesome.min.css">
-<link rel="stylesheet" href="/vendor/cdn/DaisyUI/daisyui.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css">
-<link rel="stylesheet" href="/vendor/cdn/aos.css">
+<link rel="stylesheet" href="vendor/cdn/fontawesome.min.css">
+<link rel="stylesheet" href="vendor/cdn/DaisyUI/daisyui.css">
+<link rel="stylesheet" href="vendor/cdn/animate.min.css">
+<link rel="stylesheet" href="vendor/cdn/aos.css">
 <link rel="stylesheet" href="style.min.css">
 <link rel="stylesheet" href="dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="tools.css">
-<script src="/vendor/cdn/tailwind.js"></script>
+<script src="vendor/cdn/tailwind.js"></script>
 <script>
 tailwind.config = {
   darkMode: 'class',
@@ -59,7 +59,7 @@ tailwind.config = {
   <button id="backToTop" aria-label="Back to top" class="fixed bottom-6 right-6 z-50 bg-accent text-white rounded-full shadow-lg p-3 hover:bg-accent/80 transition hidden"><i class="fa-solid fa-arrow-up"></i></button>
 <header x-data="{open:false}" class="navbar bg-background/80 backdrop-blur sticky top-0 z-50 border-b border-white/10 shadow-lg">
   <div class="flex-1">
-    <a href="#" class="btn btn-ghost normal-case text-lg">MiniTools 🔧</a>
+    <a href="index.html" class="btn btn-ghost normal-case text-lg">MiniTools 🔧</a>
   </div>
   <nav class="hidden md:flex gap-2">
     <a href="#calculators" class="btn btn-ghost btn-sm">Calculators</a>
@@ -273,15 +273,15 @@ tailwind.config = {
     <p class="mt-2">Built with <span aria-label="love">❤</span> by MiniTools Universe</p>
   </div>
 </footer>
-<script src="/vendor/cdn/alpine.min.js" defer></script>
-<script src="/vendor/cdn/aos.js" defer></script>
-<script defer src="/vendor/cdn/alpine-ui.min.js"></script>
-<script type="module">import {gsap} from "/vendor/cdn/gsap.min.js";import {ScrollTrigger} from "/vendor/cdn/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
+<script src="vendor/cdn/alpine.min.js" defer></script>
+<script src="vendor/cdn/aos.js" defer></script>
+<script defer src="vendor/cdn/alpine-ui.min.js"></script>
+<script type="module">import {gsap} from "vendor/cdn/gsap.min.js";import {ScrollTrigger} from "vendor/cdn/ScrollTrigger.min.js";gsap.registerPlugin(ScrollTrigger);window.gsap=gsap;window.ScrollTrigger=ScrollTrigger;</script>
 <script type="module" src="db.js"></script>
 <script src="https://plausible.io/js/plausible.js" data-domain="example.com" defer></script>
-<script src="/vendor/cdn/fuse.min.js"></script>
+<script src="vendor/cdn/fuse.min.js"></script>
 <script src="search.js" defer></script>
-<script type="module" src="/vendor/cdn/instantpage.mjs"></script>
+<script type="module" src="vendor/cdn/instantpage.mjs"></script>
 <script src="mini.js" defer></script>
 <script>
 // Smooth scroll for anchor links
