--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Set a timer and count down easily"/>
 <meta property="og:image" content="../../assets/countdown-timer-hourglass.png"/>
 <link rel="canonical" href="https://example.com/tools/countdown-timer/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Countdown Timer","operatingSystem":"Any","applicationCategory":"Utilities","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start the timer?","acceptedAnswer":{"@type":"Answer","text":"Enter minutes and seconds and click start."}},{"@type":"Question","name":"Can I pause it?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can pause and resume as needed."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded the timer works without internet."}},{"@type":"Question","name":"Will it alert me?","acceptedAnswer":{"@type":"Answer","text":"A simple beep sounds when time runs out."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, use the timer without any cost."}}]}</script>
 </head>
