--- a/tools/epoch-time-converter/index.html
+++ b/tools/epoch-time-converter/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Convert dates to and from Unix time"/>
 <meta property="og:image" content="../../assets/stopwatch.png"/>
 <link rel="canonical" href="https://example.com/tools/epoch-time-converter/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Epoch Time Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert to Unix time?","acceptedAnswer":{"@type":"Answer","text":"Enter a date and click convert to see the Unix timestamp."}},{"@type":"Question","name":"Can I convert from a timestamp?","acceptedAnswer":{"@type":"Answer","text":"Yes, paste the timestamp and click from epoch to see the date."}},{"@type":"Question","name":"Does it require internet?","acceptedAnswer":{"@type":"Answer","text":"No, calculations run entirely in your browser after first load."}},{"@type":"Question","name":"Is my input stored?","acceptedAnswer":{"@type":"Answer","text":"Your data never leaves the page so it stays private."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Epoch Time Converter is free and offline-ready."}}]}</script>
 </head>
