--- a/tools/fraction-calculator/index.html
+++ b/tools/fraction-calculator/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Solve fraction problems easily"/>
 <meta property="og:image" content="../../assets/fraction-calculator-briefcase.png"/>
 <link rel="canonical" href="https://example.com/tools/fraction-calculator/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Fraction Calculator","operatingSystem":"Any","applicationCategory":"EducationalApplication","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I add fractions?","acceptedAnswer":{"@type":"Answer","text":"Enter the numerators and denominators, choose addition, and the result shows the simplified sum."}},{"@type":"Question","name":"Can I multiply fractions?","acceptedAnswer":{"@type":"Answer","text":"Yes, select multiply and the calculator will display the product in simplest form."}},{"@type":"Question","name":"Does it reduce fractions?","acceptedAnswer":{"@type":"Answer","text":"Results are automatically simplified to the lowest terms."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit the tool functions without internet."}},{"@type":"Question","name":"Is my input stored anywhere?","acceptedAnswer":{"@type":"Answer","text":"No data leaves your browser so your work stays private."}}]}</script>
 </head>
