--- a/tools/graphing-calculator/index.html
+++ b/tools/graphing-calculator/index.html
@@ -11,16 +11,17 @@
 <meta property="og:description" content="Visualize equations in your browser"/>
 <meta property="og:image" content="../../assets/graphing-calculator-chart.png"/>
 <link rel="canonical" href="https://example.com/tools/graphing-calculator/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
-<script defer src="/vendor/cdn/function-plot.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/function-plot.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Graphing Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I graph a function?","acceptedAnswer":{"@type":"Answer","text":"Type an equation like x^2 in the input box and click Plot."}},{"@type":"Question","name":"Is the Graphing Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can use this tool without any cost or signup."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, all scripts are cached so it works offline."}},{"@type":"Question","name":"Can I plot multiple functions?","acceptedAnswer":{"@type":"Answer","text":"Yes, separate functions with commas to see several graphs."}},{"@type":"Question","name":"Is it mobile friendly?","acceptedAnswer":{"@type":"Answer","text":"The responsive layout lets you plot equations on any device."}}]}</script>
 </head>
