--- a/tools/simple-interest-calculator/index.html
+++ b/tools/simple-interest-calculator/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Estimate loan interest fast"/>
 <meta property="og:image" content="../../assets/simple-interest-calculator-moneybag.png"/>
 <link rel="canonical" href="https://example.com/tools/simple-interest-calculator/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Simple Interest Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate simple interest?","acceptedAnswer":{"@type":"Answer","text":"Enter principal, annual rate and time in years then press calculate."}},{"@type":"Question","name":"Can it handle monthly interest?","acceptedAnswer":{"@type":"Answer","text":"Enter the number of years including fractions for months, e.g. 1.5 for 18 months."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the tool is completely free and works offline after first load."}},{"@type":"Question","name":"Does it store my numbers?","acceptedAnswer":{"@type":"Answer","text":"No personal data is saved; all calculations run in your browser."}},{"@type":"Question","name":"Can I use it on my phone?","acceptedAnswer":{"@type":"Answer","text":"The responsive design works well on mobile devices."}}]}</script>
 </head>
