--- a/tools/temperature-converter/index.html
+++ b/tools/temperature-converter/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Convert between Celsius and Fahrenheit"/>
 <meta property="og:image" content="../../assets/temperature-converter-thermometer.png"/>
 <link rel="canonical" href="https://example.com/tools/temperature-converter/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Temperature Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert Celsius to Fahrenheit?","acceptedAnswer":{"@type":"Answer","text":"Type a Celsius value and the Fahrenheit result appears instantly."}},{"@type":"Question","name":"Can it convert Fahrenheit to Celsius?","acceptedAnswer":{"@type":"Answer","text":"Yes, enter a Fahrenheit temperature to see the Celsius equivalent."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first visit the tool is cached and works without internet."}},{"@type":"Question","name":"Is there any cost?","acceptedAnswer":{"@type":"Answer","text":"No, the Temperature Converter is completely free to use."}},{"@type":"Question","name":"Is my data stored?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; everything happens in your browser."}}]}</script>
 </head>
