--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Quickly convert metric and imperial units"/>
 <meta property="og:image" content="../../assets/unit-converter-cycle.png"/>
 <link rel="canonical" href="https://example.com/tools/unit-converter/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Unit Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I change units?","acceptedAnswer":{"@type":"Answer","text":"Choose the unit types from the dropdowns, enter a value, and the result updates automatically."}},{"@type":"Question","name":"Is there a cost?","acceptedAnswer":{"@type":"Answer","text":"No, the Unit Converter is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first load, all files are cached so it works offline."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"It currently handles common length and weight units like meters, feet, kilograms, and pounds."}},{"@type":"Question","name":"Can I use it on mobile?","acceptedAnswer":{"@type":"Answer","text":"Yes, the layout is responsive for phones and tablets."}}]}</script>
 </head>
