--- a/tools/body-fat-calculator/index.html
+++ b/tools/body-fat-calculator/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Estimate body fat percentage"/>
 <meta property="og:image" content="../../assets/body-fat-calculator-bicep.png"/>
 <link rel="canonical" href="https://example.com/tools/body-fat-calculator/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Body Fat Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I measure body fat?","acceptedAnswer":{"@type":"Answer","text":"Enter your gender, waist, neck and height measurements. The calculator uses the US Navy formula to estimate body fat."}},{"@type":"Question","name":"Is the Body Fat Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, this tool is free for personal use."}},{"@type":"Question","name":"Can I use metric units?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can switch between imperial and metric units."}},{"@type":"Question","name":"Does it store my data?","acceptedAnswer":{"@type":"Answer","text":"No information is saved. Everything runs locally in your browser."}},{"@type":"Question","name":"Is it mobile friendly?","acceptedAnswer":{"@type":"Answer","text":"The layout adapts to any screen so you can check body fat on phones and tablets."}}]}</script>
 </head>
