--- a/tools/loan-calculator/index.html
+++ b/tools/loan-calculator/index.html
@@ -11,15 +11,16 @@
 <meta property="og:description" content="Estimate monthly mortgage or loan costs"/>
 <meta property="og:image" content="../../assets/loan-bank.png"/>
 <link rel="canonical" href="https://example.com/tools/loan-calculator/" />
-<link rel="stylesheet" href="/vendor/cdn/bootstrap.min.css">
-<link rel="stylesheet" href="/vendor/cdn/animate.min.css"/>
-<link rel="stylesheet" href="/vendor/cdn/aos.css"/>
+<link rel="manifest" href="../../manifest.webmanifest">
+<link rel="stylesheet" href="../../vendor/cdn/bootstrap.min.css">
+<link rel="stylesheet" href="../../vendor/cdn/animate.min.css"/>
+<link rel="stylesheet" href="../../vendor/cdn/aos.css"/>
 <link rel="stylesheet" href="../../style.min.css">
 <link rel="stylesheet" href="../../dark.min.css" id="darkCss" media="(prefers-color-scheme: dark)">
 <link rel="stylesheet" href="../../tools.css">
-<script defer src="/vendor/cdn/aos.js"></script>
+<script defer src="../../vendor/cdn/aos.js"></script>
 <script defer src="../../app.min.js"></script>
-<script defer src="/vendor/cdn/bootstrap.bundle.min.js"></script>
+<script defer src="../../vendor/cdn/bootstrap.bundle.min.js"></script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Loan Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my loan payment?","acceptedAnswer":{"@type":"Answer","text":"Enter amount, interest rate and years, then press calculate."}},{"@type":"Question","name":"Can I use this for mortgages?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can estimate mortgage payments the same way."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded it works without internet."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No inputs are stored or sent anywhere."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Loan Calculator is completely free."}}]}</script>
 </head>
