--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ tailwind.config = {
     <i x-show="$store.theme.mode==='dark'" class="fa-solid fa-sun"></i>
     <i x-show="$store.theme.mode==='light'" class="fa-solid fa-moon"></i>
   </button>
-  <nav x-cloak x-bind:class="open ? 'translate-x-0' : '-translate-x-full'" class="fixed inset-y-0 left-0 w-64 bg-background p-4 space-y-4 transform transition-transform md:hidden">
+  <nav x-cloak x-bind:class="open ? 'translate-x-0' : '-translate-x-full'" @click.away="open=false" @keydown.escape.window="open=false" class="fixed inset-y-0 left-0 w-64 bg-background p-4 space-y-4 transform transition-transform md:hidden z-50">
     <button @click="open=false" class="text-accent text-xl mb-4 focus:outline-none focus-visible:ring" aria-label="Close menu">
       <i class="fa-solid fa-xmark"></i>
     </button>
@@ -97,7 +97,7 @@ tailwind.config = {
       <h1 class="text-6xl font-extrabold mb-4 text-white drop-shadow-lg">MiniTools Universe</h1>
       <p class="mb-6 text-white/90">Quick, lightweight utilities that work offline.</p>
       <div class="relative w-full max-w-md mx-auto mt-4">
-        <input x-model="search" placeholder="Search tools..." aria-label="Search tools" class="input input-bordered w-full pl-10" />
+        <input id="search" x-model="search" placeholder="Search tools..." aria-label="Search tools" class="input input-bordered w-full pl-10" />
         <span class="absolute left-3 top-1/2 -translate-y-1/2 text-accent"><i class="fa-solid fa-search"></i></span>
       </div>
     </div>
